src/test/06-Errors/error-no-type.txt
error-no-type.ck:1:5: error: undefined type 'Foo'...
[1] new Foo;
        ^
